src/io/fileinfo.cpp
@@ -1,5 +1,5 @@
 /***************************************************************************
- *   Copyright (C) 2004-2020 by Thomas Fischer <fischer@unix-ag.uni-kl.de> *
+ *   Copyright (C) 2004-2023 by Thomas Fischer <fischer@unix-ag.uni-kl.de> *
  *                                                                         *
  *   This program is free software; you can redistribute it and/or modify  *
  *   it under the terms of the GNU General Public License as published by  *
@@ -146,7 +146,7 @@ void FileInfo::urlsInText(const QString &text, const TestExistence testExistence
             if (internalText.startsWith(QStringLiteral("~") + QDir::separator())) {
                 const QString fullFilename = QDir::homePath() + internalText.mid(1);
                 const QFileInfo fileInfo(fullFilename);
-                const QUrl url = QUrl::fromLocalFile(fileInfo.canonicalFilePath());
+                const QUrl url = QUrl::fromLocalFile(fileInfo.absoluteFilePath());
                 if (fileInfo.exists() && fileInfo.isFile() && url.isValid() && !result.contains(url)) {
                     result << url;
                     /// Stop searching for URLs or filenames in current internal text
@@ -161,7 +161,7 @@ void FileInfo::urlsInText(const QString &text, const TestExistence testExistence
                 /// To get the absolute path, prepend filename fragment with base directory
                 const QString fullFilename = baseDirectory + QDir::separator() + internalText;
                 const QFileInfo fileInfo(fullFilename);
-                const QUrl url = QUrl::fromLocalFile(fileInfo.canonicalFilePath());
+                const QUrl url = QUrl::fromLocalFile(fileInfo.absoluteFilePath());
                 if (fileInfo.exists() && fileInfo.isFile() && url.isValid() && !result.contains(url)) {
                     result << url;
                     /// Stop searching for URLs or filenames in current internal text
@@ -171,7 +171,7 @@ void FileInfo::urlsInText(const QString &text, const TestExistence testExistence
                 /// Either the filename fragment is an absolute path OR no base directory
                 /// was given (current working directory is assumed), ...
                 const QFileInfo fileInfo(internalText);
-                const QUrl url = QUrl::fromLocalFile(fileInfo.canonicalFilePath());
+                const QUrl url = QUrl::fromLocalFile(fileInfo.absoluteFilePath());
                 if (fileInfo.exists() && fileInfo.isFile() && url.isValid() && !result.contains(url)) {
                     result << url;
                     /// stop searching for URLs or filenames in current internal text
@@ -286,7 +286,7 @@ QSet<QUrl> FileInfo::entryUrls(const QSharedPointer<const Entry> &entry, const Q
         for (const QString &extension : documentFileExtensions) {
             const QFileInfo fi(baseDirectory + QDir::separator() + entry->id() + extension);
             if (fi.exists()) {
-                const QUrl url = QUrl::fromLocalFile(fi.canonicalFilePath());
+                const QUrl url = QUrl::fromLocalFile(fi.absoluteFilePath());
                 if (!result.contains(url))
                     result << url;
             }
@@ -304,7 +304,7 @@ QSet<QUrl> FileInfo::entryUrls(const QSharedPointer<const Entry> &entry, const Q
             for (const QString &extension : documentFileExtensions) {
                 const QFileInfo fi(directory + QDir::separator() + entry->id() + extension);
                 if (fi.exists()) {
-                    const QUrl url = QUrl::fromLocalFile(fi.canonicalFilePath());
+                    const QUrl url = QUrl::fromLocalFile(fi.absoluteFilePath());
                     if (!result.contains(url))
                         result << url;
                 }
